--- a/crypto/css/main.scss
+++ b/crypto/css/main.scss
@@ -1,34 +1,152 @@
 :root {
+
+    // Color Variables
+
     --color-background: #eeeeee;
     --color-dark: #444444;
     --color-secondary: #FFF;
+    
+    // Navbar variables
+    
+    --navbar-color-active: rgb(255,255,255,0.1);
+    --navbar-color-hover: rgb(255,255,255,0.3);
+
+    --navbar-anim-transition: 0.3s;
+
+    --navbar-size: 60px;
+    --navbar-open-size: 325px;
+    --navbar-icon-padding: 10px;
+    --navbar-text-font: 20px 'Microsoft Sans Serif';
 }
 
 
 body, head, html {
     margin:0;
     padding:0;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
 }
 
 body {
-    background-color: var(--color-background);
-    display: flex;
-    
+    background-color: var(--color-background);    
 }
+
+
 
 
 
 navbar {
-    width: 70px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    * {
+        user-select: none;
+        -webkit-user-drag: none;
+    }
+
+    
+    
+    overflow: hidden;
+    width: var(--navbar-size);
     height: 100vh;
     background-color: var(--color-dark);
-    transition: 0.3s;
-    navheader {
+    transition: var(--navbar-anim-transition);
 
+
+    navheader {
+        .nav-header-icon {
+            transition: var(--navbar-anim-transition);
+            padding: var(--navbar-icon-padding);
+            width: calc(var(--navbar-size) - var(--navbar-icon-padding) * 2);
+            height: calc(var(--navbar-size) - var(--navbar-icon-padding) * 2);
+
+        }
+
+        .nav-header-icon:hover {
+            content: attr(data-src);
+            background-color: var(--navbar-color-hover);
+        }
+    }
+
+    navitems {
+        display: grid;
+        grid-template-columns: repeat(auto, var(--navbar-size));
+        * {
+            text-decoration: none;
+        }
+        a.nav-item {
+            display: flex;
+            flex-direction: row;
+            transition: var(--navbar-anim-transition);
+            .nav-item-icon {
+                margin: var(--navbar-icon-padding);
+                width: calc(var(--navbar-size) - var(--navbar-icon-padding) * 2);
+                height: calc(var(--navbar-size) - var(--navbar-icon-padding) * 2);
+            }
+
+            .nav-item-text {
+                margin-top: auto;
+                margin-bottom: auto;
+                margin-left: 10px;
+                font: var(--navbar-text-font);
+                color:var(--color-secondary);
+            }
+        }
+
+        a.nav-item-active {
+            background-color: var(--navbar-color-active);
+        }
+
+        a.nav-item:hover {
+            background-color: var(--navbar-color-hover);
+        }
+    }
+}
+// ekstra styling når navbaren er åpen
+navbar.nav-open {
+    // Setter størrelsen til den nye åpna
+    width: var(--navbar-open-size);
+
+    navheader {
+        .nav-header-icon {
+            padding: var(--navbar-icon-padding);
+            width: calc(var(--navbar-open-size) - var(--navbar-icon-padding) * 2);
+            height: calc(var(--navbar-open-size) - var(--navbar-icon-padding) * 2);
+
+        }
     }
 }
 
 
-navbar.nav-open {
-    width: 325px;
+
+
+#content {
+    overflow-y: auto;
+    font-family: 'Microsoft Sans Serif';
+    font-size: 7vh;
+    width: calc(100% - var(--navbar-size));
+    height: 100%;
+    max-height: 100%;
+    min-height: 0;
+    margin-left: var(--navbar-size);
+
+    #content-header {
+        width: 100%;
+        height: 40vh;
+        margin-bottom: 10px;
+        .header-text {
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0,0,0,0.7);
+            div {
+                text-align: center;
+                position: relative;
+                top:50%;
+                left:50%;
+                transform: translate(-50%,-50%);
+                color:#FFF;
+            }
+        }
+    }
 }
