--- a/crypto/css/main.css
+++ b/crypto/css/main.css
@@ -1,7 +1,12 @@
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 :root {
   --color-background: #eeeeee;
   --color-dark: #444444;
   --color-secondary: #FFF;
+  --color-ind-up: #2ecc71;
+  --color-ind-stay: #e74c3c;
+  --color-ind-down: #f1c40f;
   --navbar-color-active: rgb(255,255,255,0.1);
   --navbar-color-hover: rgb(255,255,255,0.3);
   --navbar-anim-transition: 0.3s;
@@ -52,7 +57,6 @@ navbar navheader .nav-header-icon {
 }
 
 navbar navheader .nav-header-icon:hover {
-  content: attr(data-src);
   background-color: var(--navbar-color-hover);
 }
 
@@ -106,20 +110,20 @@ navbar.nav-open {
 }
 
 navbar.nav-open navheader .nav-header-icon {
-  padding: var(--navbar-icon-padding);
   width: calc(var(--navbar-open-size) - var(--navbar-icon-padding) * 2);
   height: calc(var(--navbar-open-size) - var(--navbar-icon-padding) * 2);
 }
 
 #content {
-  overflow-y: auto;
   font-family: 'Microsoft Sans Serif';
   font-size: 7vh;
+  overflow-y: auto;
+  margin-left: var(--navbar-size);
   width: calc(100% - var(--navbar-size));
   height: 100%;
   max-height: 100%;
   min-height: 0;
-  margin-left: var(--navbar-size);
+  font-family: 'Roboto';
 }
 
 #content #content-header {
@@ -142,5 +146,111 @@ navbar.nav-open navheader .nav-header-icon {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   color: #FFF;
+}
+
+#content .card-title {
+  font-weight: 300;
+  font-family: 'Roboto';
+  margin-bottom: 10px;
+  font-size: 30px;
+}
+
+#content .info-card {
+  background: var(--color-secondary);
+  border-radius: 8px;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  margin: 10px;
+  padding: 10px;
+}
+
+#content .info-card .card-content {
+  font-size: 20px;
+  font-family: 'Roboto';
+}
+
+#content .split-half {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+}
+
+#content .up {
+  color: var(--color-ind-up);
+}
+
+#content .stay {
+  color: var(--color-ind-down);
+}
+
+#content .down {
+  color: var(--color-ind-stay);
+}
+
+#content #multi-crypto-card {
+  background: var(--color-secondary);
+  border-radius: 8px;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  margin: 10px;
+  padding: 10px;
+}
+
+#content #multi-crypto-card .card-content {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+  font-size: 25px;
+}
+
+#content #multi-crypto-card .card-content .currency_elem {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 50px 1fr 1fr;
+      grid-template-columns: 50px 1fr 1fr;
+}
+
+#content #multi-crypto-card .card-content .currency_elem .coin_icon {
+  margin: 5px;
+  width: calc(50px - 10px);
+  height: calc(50px - 10px);
+}
+
+#content #multi-crypto-card .card-content .currency_elem .name {
+  margin-left: 10px;
+  line-height: 50px;
+}
+
+#content #multi-crypto-card .card-content .currency_elem .value {
+  line-height: 50px;
+}
+
+#content #single-crypto-card {
+  /*
+            Samme greia som forrrige gang
+            kanskje jeg burde ha en class som gjorde at jeg slapp å måtte skrive dette så mange ganger
+        */
+  background: var(--color-secondary);
+  border-radius: 8px;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  margin: 10px;
+  padding: 10px;
+}
+
+#content #single-crypto-card .card-content .value {
+  font-size: 40px;
+}
+
+#content #single-crypto-card .card-content .change {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 3fr;
+      grid-template-columns: 1fr 3fr;
+  font-size: 30px;
 }
 /*# sourceMappingURL=main.css.map */
